[package]
name = "tama_core"
description = "运行时抽象层核心 trait 定义"
version = "0.1.0"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true

[lints]
workspace = true
